[package]
name = "filecoin-proofs-api"
version = "8.0.1"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bellperson = { version = "0.14.0", default-features = false }
bincode = "1.1.2"
serde = "1.0.104"
# filecoin-proofs-v1 = { package = "filecoin-proofs", version = "~8.0", default-features = false }
# filecoin-hashers = { version = "~3.0", default-features = false, features = ["poseidon", "sha256"] }
# fr32 = { version = "~1.0", default-features = false }
# storage-proofs-core = { version = "~8.0", default-features = false }

[features]
default = ["pairing", "gpu", "multicore-sdr"]
pairing = ["filecoin-proofs-v1/pairing", "bellperson/pairing", "storage-proofs-core/pairing", "fr32/pairing"]
blst = ["filecoin-proofs-v1/blst", "bellperson/blst", "storage-proofs-core/blst", "fr32/blst"]
gpu = ["filecoin-proofs-v1/gpu", "filecoin-hashers/gpu", "storage-proofs-core/gpu", "bellperson/gpu", "fr32/gpu"]
multicore-sdr = ["filecoin-proofs-v1/multicore-sdr"]

[dependencies.filecoin-proofs-v1]
git = "https://github.com/filcloud/rust-fil-proofs"
branch = "filcloud-25"
package = "filecoin-proofs"
default-features = false

[dependencies.filecoin-hashers]
git = "https://github.com/filcloud/rust-fil-proofs"
branch = "filcloud-25"
package = "filecoin-hashers"
default-features = false
features = ["poseidon", "sha256"]

[dependencies.fr32]
git = "https://github.com/filcloud/rust-fil-proofs"
branch = "filcloud-25"
package = "fr32"
default-features = false

[dependencies.storage-proofs-core]
git = "https://github.com/filcloud/rust-fil-proofs"
branch = "filcloud-25"
package = "storage-proofs-core"
default-features = false

[patch.crates-io]
bellperson = { git = "https://github.com/filcloud/bellman", branch ="filcloud-26" }
neptune = { git = "https://github.com/filcloud/neptune", branch ="filcloud-25" }
