[package]
name = "filecoin-proofs-api"
version = "6.1.0"
description = "API to interact with the proofs system in Filecoin"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-filecoin-proofs-api"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bellperson = { version = "0.13", default-features = false }
bincode = "1.1.2"
serde = "1.0.104"
# filecoin-proofs-v1 = { package = "filecoin-proofs", version = "~6.1", default-features = false }
# filecoin-hashers = { version = "~1.1", default-features = false, features = ["poseidon", "sha256"] }
# fr32 = { version = "~0.2", default-features = false }
# storage-proofs-core = { version = "~6.1", default-features = false }

[features]
default = ["pairing", "gpu2"]
pairing = ["filecoin-proofs-v1/pairing", "bellperson/pairing"]
blst = ["filecoin-proofs-v1/blst", "bellperson/blst"]
gpu = ["filecoin-proofs-v1/gpu", "filecoin-hashers/gpu", "storage-proofs-core/gpu", "bellperson/gpu", "fr32/gpu"]
gpu2 = ["filecoin-proofs-v1/gpu2", "filecoin-hashers/gpu2", "storage-proofs-core/gpu2", "bellperson/gpu", "fr32/gpu"]

[dependencies.filecoin-proofs-v1]
git = "https://github.com/filcloud/rust-fil-proofs"
branch = "filcloud-24"
package = "filecoin-proofs"
default-features = false

[dependencies.filecoin-hashers]
git = "https://github.com/filcloud/rust-fil-proofs"
branch = "filcloud-24"
package = "filecoin-hashers"
default-features = false

[dependencies.fr32]
git = "https://github.com/filcloud/rust-fil-proofs"
branch = "filcloud-24"
package = "fr32"
default-features = false

[dependencies.storage-proofs-core]
git = "https://github.com/filcloud/rust-fil-proofs"
branch = "filcloud-24"
package = "storage-proofs-core"
default-features = false

[patch.crates-io]
bellperson = { git = "https://github.com/filcloud/bellman", branch ="filcloud-24" }
neptune = { git = "https://github.com/filcloud/neptune", branch ="filcloud-24" }
